--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:lMraQdId7eO5vdZO7Z8nVbsxoH0dPc/mZ9qVioV2VLo=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,10 +10,11 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=8889
-DB_DATABASE=team176
+DB_PORT=3306
+DB_DATABASE=laravel
 DB_USERNAME=root
-DB_PASSWORD=root
+DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
